test/tests/stages/1_int_constants/invalid_parse/space_in_keyword.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(retur)
  identifier(n)
  const int(0)
  ;
  }
